--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,12 @@
 envlist = py27,pep8
 skipsdist = True
 
+[testenv]
+sitepackages = False
+deps = -r{toxinidir}/requirements.txt
+       -r{toxinidir}/test-requirements.txt
+commands = python -m unittest discover -s {toxinidir}/test {posargs}
+
 [testenv:pep8]
 commands = flake8 {toxinidir}
 
